--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,10 +75,10 @@ CurrentRotGridSize=4
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/Bowling
-MRUItem3=/Game/_Scenes/IntroScene
+MRUItem0=/Game/_Scenes/IntroScene
+MRUItem1=/Game/_Scenes/HeartBall
+MRUItem2=/Game/_Scenes/KnifeThrow
+MRUItem3=/Game/_Scenes/Bowling
 MRUItem4=/Game/_Scenes/Maze
 MRUItem5=/Game/_Scenes/ClownBall
 MRUItem6=/Game/VirtualRealityBP/Maps/MotionControllerMap
@@ -89,7 +89,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Materials/_BaseMaterial_Templates
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -113,7 +113,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/IntroScene
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -582,6 +582,18 @@ RotatingMovementComponent.Tags=True
 RotatingMovementComponent.Activation=True
 RotatingMovementComponent.Cooking=True
 MaterialEditorPreviewParameters.ParameterGroups=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionRotator.MaterialExpressionRotator=True
+MaterialExpressionRotator.MaterialExpression=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionVertexNormalWS.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -604,6 +616,8 @@ KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
+RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK_Sprite.LOGO_BLACK_Sprite;
@@ -622,8 +636,6 @@ RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cyl
 RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cylinder_001.RustedPipeV1_Cylinder_001;
 RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cylinder.RustedPipeV1_Cylinder;
 RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cube_002.RustedPipeV1_Cube_002;
-RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cube_001.RustedPipeV1_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cube.RustedPipeV1_Cube;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -651,7 +663,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/_Original Assets/KnifeThrow/BodyParts/FemaleTargetHeadV1.fbx
+GenericImport=F:/_CIU/_Original Assets/_Matt Textures all Maps/Cement_Speckle1/AmbientOcclusionMap.png
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -1339,6 +1351,8 @@ bConvertSceneUnit=False
 /Game/_Scenes/IntroScene.IntroScene:PersistentLevel.AmbientSound_1.AmbientSound_SoundCue=0
 /Game/_Scenes/Bowling.Bowling:PersistentLevel.AmbientSound_Circus_RightPA2.AmbientSound_Circus_RightPA2_SoundCue=0
 /Game/_Scenes/Bowling.Bowling:PersistentLevel.AmbientSound_Circus_RightPA.AmbientSound_Circus_RightPA_SoundCue=0
+/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat=0
+/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat=0
 
 [MaterialEditor]
 PrimType=1
